@@ -149,12 +149,6 @@ RUN cmake -H. -Bbuilds/release -DCMAKE_INSTALL_PREFIX=/usr && \
 
 WORKDIR /usr/local
 RUN curl -SsOL \
-         https://github.com/AppImage/AppImageKit/releases/download/13/appimagetool-${ARCH}.AppImage && \
-    chmod +x appimagetool-${ARCH}.AppImage && \
-    ./appimagetool-${ARCH}.AppImage --appimage-extract && \
-    chmod 0755 squashfs-root && \
-    chmod 0755 squashfs-root/usr && \
-    chmod 0755 squashfs-root/usr/bin && \
-    chmod 0755 squashfs-root/usr/lib && \
-    chmod 0755 squashfs-root/usr/lib/appimagekit && \
-    chmod 0755 squashfs-root/usr/share
+         https://github.com/linuxdeploy/linuxdeploy/releases/download/1-alpha-20240109-1/linuxdeploy-static-${ARCH}.AppImage && \
+    chmod +x linuxdeploy-static-${ARCH}.AppImage && \
+    ./linuxdeploy-static-${ARCH}.AppImage --appimage-extract
