@@ -5,6 +5,7 @@ vX.Y.Z (YYYY-MM-DD)
 - Parallelize some of the plotting in the generate-report and pgsql-report
   scripts
 - psql: run TRUNCATE and COPY within a transaction if data is not partitioned
+- Use linuxdeploy to create AppImage
 
 v0.53.9 (2024-02-07)
 
